--- a/components/ImageTextBlock/styles.scss
+++ b/components/ImageTextBlock/styles.scss
@@ -75,12 +75,15 @@ $lgHeight: 600px;
 
 .textCol {
   height: $smHeight;
-
+  overflow: scroll;
   @include media-breakpoint-up(md) {
     height: $lgHeight;
   }
-
-  overflow: hidden;
+  padding-left: 0;
+  padding-right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   position: relative;
   margin-top: $smHeight;
 
@@ -92,8 +95,7 @@ $lgHeight: 600px;
 }
 
 .textContainer {
-  position: absolute;
-  margin: 0 auto;
-  top: 50%;
-  transform: translateY(-50%);
+  overflow: scroll;
+  padding-bottom: 1em;
+  padding-top: 1em;
 }
